--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 
 
 #resume {
-    background-image: url('/images/resumewallpaper.jpg');
+    background-image: url('images/resumewallpaper.jpg');
 }
 
 h1 {
