--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 
 
 #resume {
-    background-image: url('images/resumewallpaper.jpg');
+    background-image: url('../images/resumewallpaper.jpg');
 }
 
 h1 {
@@ -30,7 +30,7 @@ h1 {
 
 
 .resume-header{
-    background-image: url("images/resume-header-picture.jpg");
+    background-image: url("../images/resume-header-picture.jpg");
     background-size: cover;
     padding-bottom: 30px;
     text-align: center;
