changes to jpg path

--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,7 @@ h1 {
 
 
 #major {
-    background-image: url('/images/majorwallpaper.jpg');
+    background-image: url('../images/majorwallpaper.jpg');
     background-color: rgb(202, 199, 199);
     background-blend-mode:luminosity;
 }
@@ -297,7 +297,7 @@ h1 {
 
 
 .major-header {
-    background-image: url('/images/major-header-picture.jpg');
+    background-image: url('../images/major-header-picture.jpg');
     background-size: cover;
     padding-bottom: 30px;
     text-align: center;
@@ -336,7 +336,7 @@ h1 {
 
 
 #personalproject {
-    background-image: url('/images/personalproject.jpg');
+    background-image: url('../images/personalproject.jpg');
 
 }
 
@@ -346,7 +346,7 @@ h1 {
 
 
 .pp-header {
-    background-image: url('/images/major-header-picture.jpg');
+    background-image: url('../images/major-header-picture.jpg');
     background-size: cover;
     padding-bottom: 30px;
     text-align: center;
@@ -377,7 +377,7 @@ h1 {
     font-size: 1.1em;
     font-weight: lighter;
     border-bottom: 1px solid rgba(255, 255, 255, .3);
-    background-image: url('/images/something else2.jpg');
+    background-image: url('../images/something else2.jpg');
     background-size: cover;
     padding-bottom: 30px;
 }
