--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Anek+Odia&family=Beau+Rivage&family=Exo:ital,wght@1,500&family=Send+Flowers&display=swap');
-@media all and (max-width: 699px) and (min-width: 520px), (min-width: 1151px) {
+@media all and (max-width: 699px) and (min-width: 520px), (min-width: 1151px);
 
 
 
