changed font family for anek-odi

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 .profileSec, .collegeInfoSec, .classes, .introduction, .process, .continue, .highschool, .another-college, .society{
     box-sizing: border-box;
-    font-family: "Anek Odia";
+    font-family: "Ane+Odia";
 }
 
 .background{    
