--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 
 .profileSec, .collegeInfoSec, .classes, .introduction, .process, .continue, .highschool, .another-college, .society {
-    font-family: "Ane Odia";
+    font-family: 'Ane Odia';
 }
 
 .background{    
