--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ img {
     max-width: 100%;
 }
       
-@media screen and (max-width: 620px) {
+@media all and (max-width: 620px) {
     img {
     width: 75%;
 }
