update to media and moved all three to top

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Anek+Odia&family=Beau+Rivage&family=Exo:ital,wght@1,500&family=Send+Flowers&display=swap');
 
+@media all and (max-width: 600px) {
+    img {
+    width: 75%;
+}
+}   
+@media (orientation: landscape) and (min-width: 500px){
+    img {
+        width: 100%;
+    }
+}
 
+img {
+    image-rendering: high-quality;
+    max-width: 100%;
+}
       
  
 
@@ -453,21 +467,7 @@ p.intro:first-letter {
     margin-bottom: 60px;
 }
 
-@media all and (max-width: 600px) {
-    img {
-    width: 75%;
-}
-}   
-@media (orientation: landscape) {
-    img {
-        width: 100%;
-    }
-}
 
-img {
-    image-rendering: high-quality;
-    max-width: 100%;
-}
     
     
     
